--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ crashlytics-build.properties
 # Imports from the assetstore
 /[Aa]ssets/Imports
 /Assets/Imports
+/Assets/Hovl*
+/Assets/Text*
+/Assets/Imports*
+/Assets/Particle*Ribbon*
