--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "com.unity.ads": "4.4.2",
+    "com.unity.analytics": "3.8.1",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.2.2",
+    "com.unity.purchasing": "4.9.3",
     "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
